TP-1142 adjust mobile menu z-index and fix php error by splitting the template

--- a/public/themes/custom/palvelumanuaali/components/03-organisms/site/site-header/_site-header.scss
+++ b/public/themes/custom/palvelumanuaali/components/03-organisms/site/site-header/_site-header.scss
@@ -140,7 +140,7 @@ body:not(.logged-in) {
     height: 100%;
     position: absolute;
     background: white;
-    z-index: 100;
+    z-index: 200;
     padding: 0 $space;
     margin-left: 0;
     transform:translateX(-100%);
